@@ -1,5 +1,8 @@
 1.4 beta 1
 ==========
+(Henry Jerez)
+- SF Patch #1246928 DIDL plug-in for DSpace
+
 (Robert Tansley)
 - SF Patch #1244813 Expose METS to OAI-PMH harvesters
 - SF Patch #1209318 Configurable Lucene Analyzer, Chinese search
